tests/baselines/reference/emptyGenericParamList.errors.txt
tests/cases/compiler/emptyGenericParamList.ts(2,8): error TS2314: Generic type 'I<T>' requires 1 type argument(s).
tests/cases/compiler/emptyGenericParamList.ts(2,9): error TS1099: Type argument list cannot be empty.


==== tests/cases/compiler/emptyGenericParamList.ts (2 errors) ====
    class I<T> {}
    var x: I<>;
           ~~~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).
            ~~
!!! error TS1099: Type argument list cannot be empty.